k8s/platform/seaweedfs/overlays/dev/http-seaweedfs-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-seaweedfs-dashboard
  namespace: platform
spec:
  hostnames:
    - seaweedfs.apps.192-168-58-2.sslip.io
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-shared-outpost
          namespace: auth
          port: 9000
