k8s/platform/seaweedfs/overlays/dev/http-seaweedfs-filer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-seaweedfs-filer
  namespace: platform
spec:
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
      matches:
        - path:
            type: PathPrefix
            value: /seaweed/
      backendRefs:
        - name: seaweedfs-filer
          port: 8888
