k8s/platform/seaweedfs/overlays/dev/http-seaweedfs-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-seaweedfs-public
  namespace: platform
spec:
  hostnames:
    - storage.apps.192-168-58-2.sslip.io
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweedfs-s3
          port: 8333
