k8s/platform/seaweedfs/overlays/dev/http-seaweedfs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-seaweedfs
  namespace: platform
spec:
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  hostnames:
    - "storage.homelab.local"
  rules:
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: /personal-website
    #   backendRefs:
    #     - name: seaweedfs-storage
    #       port: 8333
    # - filters:
    #     - type: ExtensionRef
    #       extensionRef:
    #         group: traefik.io
    #         kind: Middleware
    #         name: authentik-forward-auth
    #   matches:
    #     - path:
    #         type: PathPrefix
    #         value: /internal-artifacts
    #   backendRefs:
    #     - name: seaweedfs-storage
    #       port: 8333
