k8s/platform/seaweedfs/overlays/dev/httproute-public-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-seaweedfs-public
spec:
  hostnames:
    - storage.apps.192-168-58-2.sslip.io
